[gd_scene load_steps=6 format=2]

[ext_resource path="res://projectiles/particle1.png" type="Texture" id=1]
[ext_resource path="res://projectiles/Nift.gd" type="Script" id=2]
[ext_resource path="res://projectiles/lite.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/particles/pars.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]

[node name="Nift" type="Area2D" groups=["projectile"]]
collision_layer = 8
collision_mask = 4
script = ExtResource( 2 )

[node name="pars" parent="." instance=ExtResource( 4 )]

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="Light2D" parent="." instance=ExtResource( 3 )]
scale = Vector2( 0.5, 0.25 )
color = Color( 0.952941, 0.952941, 0.952941, 1 )

[connection signal="area_entered" from="." to="." method="_on_Nift_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Nift_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
